# hpcat

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  accel_hip.c  accel_nvml.c  accel_ze.c  common.h  configure  hpcat.c  hpcat.h  output.c  output.h  settings.c  settings.h
man/: CMakeLists.txt
man/man1/: hpcat.1
src/: CMakeLists.txt  common.h  hint.c  hint.h  hpcat.c  hpcat.h  output.c  output.h  settings.c  settings.h  version.h.in
src/amd/: CMakeLists.txt  accel_hip.c
src/intel/: CMakeLists.txt  accel_ze.c
src/nvidia/: CMakeLists.txt  accel_nvml.c
submodules/: CMakeLists.txt
