CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(hpcat)

OPTION(DEBUG "Debug mode." OFF)

IF(DEBUG)
    SET(CMAKE_BUILD_TYPE Debug)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g -fno-omit-frame-pointer")
ELSE(DEBUG)
    SET(CMAKE_BUILD_TYPE Release)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
ENDIF(DEBUG)

ADD_SUBDIRECTORY(submodules)
ADD_SUBDIRECTORY(src)
