ADD_SUBDIRECTORY(amd)
ADD_SUBDIRECTORY(intel)
ADD_SUBDIRECTORY(nvidia)

FIND_PACKAGE(MPI REQUIRED)

# Enable OpenMP
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")

INCLUDE_DIRECTORIES(SYSTEM ${MPI_INCLUDE_PATH} ${HWLOC_INSTALL_PATH}/include)
ADD_EXECUTABLE(hpcat hpcat.c output.c settings.c)
ADD_DEPENDENCIES(hpcat hwloc)

TARGET_LINK_LIBRARIES(hpcat ${MPI_C_LIBRARIES} ${HWLOC_INSTALL_PATH}/lib/libhwloc.a)

INSTALL(TARGETS hpcat DESTINATION ${CMAKE_INSTALL_PREFIX})
