# Building AMD module

FIND_PROGRAM(HIPCONFIG_FOUND "hipconfig")
IF(HIPCONFIG_FOUND AND NOT DEFINED DISABLE_GPU_AMD)
    EXECUTE_PROCESS(COMMAND hipconfig --path OUTPUT_VARIABLE ROCM_INSTALL_PATH)

    PROJECT(hpcathip)

    set(CMAKE_C_COMPILER "hipcc")
    INCLUDE_DIRECTORIES(${ROCM_INSTALL_PATH}/include ${HWLOC_INSTALL_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR}/..)
    LINK_DIRECTORIES(${ROCM_INSTALL_PATH}/lib)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__HIP_PLATFORM_AMD__")
    ADD_LIBRARY(hpcathip SHARED accel_hip.c)
    SET_PROPERTY(TARGET hpcathip PROPERTY POSITION_INDEPENDENT_CODE ON)
    LIST(APPEND CMAKE_INSTALL_RPATH ${ROCM_INSTALL_PATH}/lib)

    ADD_DEPENDENCIES(hpcathip hwloc)

    TARGET_LINK_LIBRARIES(hpcathip amdhip64 ${HWLOC_INSTALL_PATH}/lib/libhwloc.a)

    INSTALL(TARGETS hpcathip DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()







