# Building Intel module

IF(DEFINED ENV{ONEAPI_ROOT} AND NOT DEFINED DISABLE_GPU_INTEL)
    SET(ONEAPI_INSTALL_PATH $ENV{ONEAPI_ROOT})

    PROJECT(hpcatze)

    INCLUDE_DIRECTORIES(${ONEAPI_INSTALL_PATH}/include ${HWLOC_INSTALL_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR}/..)
    LINK_DIRECTORIES(${ONEAPI_INSTALL_PATH}/lib)
    ADD_LIBRARY(hpcatze SHARED accel_ze.c)
    SET_PROPERTY(TARGET hpcatze PROPERTY POSITION_INDEPENDENT_CODE ON)
    LIST(APPEND CMAKE_INSTALL_RPATH ${CUDA_INSTALL_PATH}/lib)

    ADD_DEPENDENCIES(hpcatze hwloc)

    TARGET_LINK_LIBRARIES(hpcatze ze_loader ${HWLOC_INSTALL_PATH}/lib/libhwloc.a)

    INSTALL(TARGETS hpcatze DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()
