# Building NVIDIA module

IF(DEFINED ENV{CUDA_HOME} AND NOT DEFINED DISABLE_GPU_NVIDIA)
    SET(CUDA_INSTALL_PATH $ENV{CUDA_HOME})

    PROJECT(hpcatnvml)

    INCLUDE_DIRECTORIES(${CUDA_INSTALL_PATH}/include ${HWLOC_INSTALL_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR}/..)
    LINK_DIRECTORIES(${CUDA_INSTALL_PATH}/lib64 ${CUDA_INSTALL_PATH}/lib64/stubs)
    ADD_LIBRARY(hpcatnvml SHARED accel_nvml.c)
    SET_PROPERTY(TARGET hpcatnvml PROPERTY POSITION_INDEPENDENT_CODE ON)
    LIST(APPEND CMAKE_INSTALL_RPATH ${CUDA_INSTALL_PATH}/lib64)
    LIST(APPEND CMAKE_INSTALL_RPATH ${CUDA_INSTALL_PATH}/lib64/stubs)

    ADD_DEPENDENCIES(hpcatnvml hwloc)

    TARGET_LINK_LIBRARIES(hpcatnvml nvidia-ml ${HWLOC_INSTALL_PATH}/lib/libhwloc.a)

    INSTALL(TARGETS hpcatnvml DESTINATION ${CMAKE_INSTALL_PREFIX})
ENDIF()
